%% ERD — Entités et relations — généré le 2026-08-09 depuis la base réelle
%% 14 entités, 18 relations
%%
%% Convention de cardinalité : A ||--o{ B se lit
%%   - côté A : exactement un (1,1)  — la FK de B référence la PK de A
%%     et la colonne FK est NOT NULL
%%   - côté B : zéro ou plusieurs (0,n)
%% Vérifié : 0 colonne(s) FK nullable(s) sur 18.
%% Le libellé de chaque relation est le nom réel de la colonne FK.
erDiagram
  role ||--o{ user : "role_id"
  user ||--o{ evaluation : "evaluated_id"
  user ||--o{ evaluation : "evaluator_id"
  user ||--o{ follow : "followed_id"
  user ||--o{ follow : "follower_id"
  conversation ||--o{ message : "conversation_id"
  user ||--o{ message : "receiver_id"
  user ||--o{ message : "sender_id"
  user ||--o{ refresh_token : "user_id"
  category ||--o{ skill : "category_id"
  available ||--o{ user_has_available : "available_id"
  user ||--o{ user_has_available : "user_id"
  conversation ||--o{ user_has_conversation : "conversation_id"
  user ||--o{ user_has_conversation : "user_id"
  skill ||--o{ user_has_interest : "skill_id"
  user ||--o{ user_has_interest : "user_id"
  skill ||--o{ user_has_skill : "skill_id"
  user ||--o{ user_has_skill : "user_id"
